<resources>
    <string name="app_name">Explicit Intents</string>
    <string name="btnAct2">Activity 2</string>
    <string name="btnAct3">Activity 3</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="textview">Data from Activity 3 will be displayed here</string>
    <string name="welcome_to_activity_2">WELCOME TO ACTIVITY 2</string>
    <string name="please_enter_your_surname">Please Enter Your Surname</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
</resources>